# purple-agent-hackathon

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SUBMISSION.md  package-lock.json  package.json  solpg_lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/bulk-stake/: page.tsx
frontend/src/app/api/agent/propose/: route.ts
frontend/src/app/api/curator/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/propose/: page.tsx
frontend/src/app/query/: page.tsx
frontend/src/app/stake/: page.tsx
frontend/src/components/: Navbar.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/src/lib/: knowledge-sources.ts  moltbook-api.ts  solsage-config.ts  solsage-program.ts
programs/solsage/: Cargo.toml
programs/solsage/src/: lib.rs
scripts/: bulk-stake.ts
